# SecureFlow-apk-

./: .gitignore  CPP_AES_IMPLEMENTATION.md  ENCRYPTION_ARCHITECTURE.md  PLAINTEXT_FIX.md  PROJECT_FLOW_ANALYSIS.md  QUICK_FIX_SUMMARY.md  README.md  build_apk.bat  folder_structure.txt  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: BUILD_AND_RUN.md  CMakeLists.txt  FINAL_STATUS.md  INDEX.md  JNI_Wrapper.cpp  QUICK_REFERENCE.md  README_STRATEGY_PATTERN.md  SUBMISSION_SUMMARY.md  build_demo.ps1  native_ffi_bridge.cpp  quick_test.bat  quick_test.sh  strategy_pattern_demo.cpp  test_strategy_pattern.cpp
android/app/src/main/cpp/core/: AESEncryptionStrategy.cpp  AESEncryptionStrategy.h  AuthManager.cpp  AuthManager.h  DatabaseManager.cpp  DatabaseManager.h  EncryptionContext.cpp  EncryptionContext.h  Encryption_Service.cpp  IEncryptionStrategy.h  NoEncryptionStrategy.cpp  NoEncryptionStrategy.h  PasswordGenerator.cpp  PasswordGenerator.h  PasswordManager.cpp  PasswordManager.h  SimpleAES.cpp  SimpleAES.h  StorageManager.h  XOREncryptionStrategy.cpp  XOREncryptionStrategy.h
android/app/src/main/cpp/models/: PasswordEntry.cpp  PasswordEntry.h
android/app/src/main/kotlin/com/example/last_final/: MainActivity.kt  NativePasswordService.kt
docs/: CPP_ENCRYPTION_OOP.md  CPP_OOP_DESIGN.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  test_backup_flow.dart  test_encryption.dart
lib/screens/: add_password_screen.dart  app_lock_setup_screen.dart  backup_debug_screen.dart  debug_screen.dart  edit_password_screen.dart  home_screen.dart  lock_screen.dart  login_screen.dart  password_generator_screen.dart  password_list_screen.dart  pin_setup_screen.dart  pin_verification_screen.dart  security_dashboard_screen.dart  setup_screen.dart
lib/services/: app_lock_service.dart  app_pin_service.dart  auth_service.dart  encryption_service.dart  firebase_service.dart  native_encryption.dart  native_password_service.dart  security_service.dart  storage_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
